--- a/.gitignore
+++ b/.gitignore
@@ -4,13 +4,12 @@
 /public/hot
 /public/storage
 /storage/*.key
-/vendor
-.env
 .env.backup
 .env.production
 Homestead.json
 Homestead.yaml
 auth.json
+vendor
 npm-debug.log
 yarn-error.log
 /.fleet
